--- a/index.html
+++ b/index.html
@@ -1675,7 +1675,7 @@ button.onclick = () => {
 </section>
 
 <section id="css-animations-easing-bug-video">
-<video data-autoplay>
+<video data-autoplay muted>
   <source src="video/unlock-animation-stutter.mp4" type="video/mp4">
 </video>
 <style>
@@ -1687,7 +1687,7 @@ button.onclick = () => {
 </section>
 
 <section id="css-animations-easing-bug-video-slow-mo">
-<video data-autoplay>
+<video data-autoplay muted>
   <source src="video/unlock-animation-slow-motion.mp4" type="video/mp4">
 </video>
 <style>
