--- a/meetpie/finder-only-with-spinner.html
+++ b/meetpie/finder-only-with-spinner.html
@@ -155,14 +155,14 @@ html, body {
   top: 0;
   left: 0;
   width: 100%;
-  height: 20em;
+  height: 25em;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 .finder-tab .popup > .spinner > .pie {
-  width: 10em;
-  height: 10em;
+  width: 5em;
+  height: 5em;
   animation: spin 1s linear infinite;
 }
 @keyframes spin {
@@ -229,7 +229,10 @@ function Finder() {
     evt.preventDefault();
     setPopupActive(true);
     popupRef.current.addEventListener('transitionend', () => {
-      setPopupLoading(false);
+      // Add some artificial delay for demo purposes
+      setTimeout(() => {
+        setPopupLoading(false);
+      }, 500);
     }, { once: true });
   });
 
