--- a/index.html
+++ b/index.html
@@ -159,7 +159,6 @@ document.getElementsByTagName('head')[0].appendChild(link);
   <ul class="pie-list">
     <li>The first social network for meat pie lovers!</li>
     <li>PWA (Pie Web App)</li>
-    <li>Latest (p) A.I. technology</li>
   </ul>
 </div>
 </section>
@@ -2658,22 +2657,19 @@ react.render(
 <h2 class="svg smaller">
   <svg><text y="1em" x="3px">When you click&hellip;</svg>
 </h2>
-<div class=side-by-side>
-  <ol>
-    <li>Handle click
-    <li class=strike>Create DOM elements
-    <li>Resolve style
-      <ul style="font-size: smaller" class=strike>
-        <li>(<code>&lt;CSSTransition&gt;</code> resolves style and layout
-          multiple times)
-      </ul>
-    <li>Trigger transition
-    <li class=strike>Calculate layout
-    <li class=strike>Paint each new element
-    <li>Run the transition
-  </ol>
-  <img src="img/bad-router-profile.png">
-</div>
+<ol>
+  <li>Handle click
+  <li class=strike>Create DOM elements
+  <li>Resolve style
+    <ul style="font-size: smaller" class=strike>
+      <li>(<code>&lt;CSSTransition&gt;</code> resolves style and layout
+        multiple times)
+    </ul>
+  <li>Trigger transition
+  <li class=strike>Calculate layout
+  <li class=strike>Paint each new element
+  <li>Run the transition
+</ol>
 <style>
 #fixed-single-page-app-explained .side-by-side ol {
   font-size: 25px;
@@ -2723,10 +2719,9 @@ react.render(
   <svg width="900px" viewBox="0 0 670 350">
     <text y=".9em" x="50%" text-anchor="middle"
       ><tspan class="number">Point 9</tspan><tspan
-      dy="1.5em" x="50%" class="summary">Try to have elements</tspan><tspan
+              dy="1.5em" x="50%" class="summary">Try to have <tspan>something</tspan></tspan><tspan
       dy="1.1em" x="50%" class="summary">ready to animate</tspan><tspan
-      dy="1.1em" x="50%" class="summary"><tspan class="emphasis">before</tspan
-      > you need them</tspan></text></svg>
+      dy="1.1em" x="50%" class="summary">right away</text></svg>
 </h1>
 </section>
 
