Fix formatting of point 9

--- a/index.html
+++ b/index.html
@@ -2753,7 +2753,8 @@ react.render(
   <svg width="900px" viewBox="0 0 670 350">
     <text y=".9em" x="50%" text-anchor="middle"
       ><tspan class="number">Point 9</tspan><tspan
-              dy="1.5em" x="50%" class="summary">Try to have <tspan>something</tspan></tspan><tspan
+              dy="1.5em" x="50%" class="summary">Try to have <tspan
+                                 class=emphasis>something</tspan></tspan><tspan
       dy="1.1em" x="50%" class="summary">ready to animate</tspan><tspan
       dy="1.1em" x="50%" class="summary">right away</text></svg>
 </h1>
