Tweak slide transitions

--- a/index.html
+++ b/index.html
@@ -1687,7 +1687,7 @@ button.onclick = () => {
 </section>
 
 <section id="css-animations-easing-bug-video-slow-mo">
-<video data-autoplay muted>
+<video data-autoplay muted loop>
   <source src="video/unlock-animation-slow-motion.mp4" type="video/mp4">
 </video>
 <style>
@@ -1886,7 +1886,7 @@ function stopWebAnimationsIntro() {
 </script>
 </section>
 
-<section id="why-web-animations">
+<section id="why-web-animations" data-transition="fade-out">
 <h2 class="svg">
   <svg><text y="1em" x="3px">Why?</svg>
 </h2>
@@ -1926,7 +1926,7 @@ function stopWebAnimationsIntro() {
 </style>
 </section>
 
-<section id="web-animations-browser-support">
+<section id="web-animations-browser-support" data-transition="fade">
 <h2 class="svg">
   <svg><text y="1em" x="3px">Browser support</svg>
 </h2>
@@ -1970,7 +1970,7 @@ function stopWebAnimationsIntro() {
 </style>
 </section>
 
-<section id="who-web-animations">
+<section id="who-web-animations" data-transition=fade>
 <h2 class="svg">
   <svg><text y="1em" x="3px">Who?</svg>
 </h2>
@@ -1995,7 +1995,7 @@ function stopWebAnimationsIntro() {
 </style>
 </section>
 
-<section id="web-animations-feature-detection">
+<section id="web-animations-feature-detection" data-transition=fade>
 <h2 class="svg">
   <svg><text y="1em" x="3px">Feature detection</svg>
 </h2>
@@ -2442,7 +2442,7 @@ function stopWebAnimationsEasing() {
   <iframe width="400" height="600" src="meetpie/index.html"></iframe>
 </section>
 
-<section id="gmail-example">
+<section id="gmail-example" data-transition="fade-out">
 <video data-autoplay loop>
   <source src="video/gmail.mp4" type="video/mp4">
 </video>
@@ -2455,7 +2455,7 @@ function stopWebAnimationsEasing() {
 </style>
 </section>
 
-<section id="taketori">
+<section id="taketori" data-transition=fade>
 <video data-autoplay>
   <source src="video/taketori-sped-up.mp4" type="video/mp4">
 </video>
@@ -2490,7 +2490,7 @@ function stopWebAnimationsEasing() {
 </h1>
 </section>
 
-<section id="perf-inspection">
+<section id="perf-inspection" data-transition=fade-out>
 <div class="lineup">
   <div class=some-ok>
     <svg class=pie><use href="#pie"></svg>
@@ -2530,7 +2530,7 @@ function stopWebAnimationsEasing() {
 </style>
 </section>
 
-<section id="perf-inspection-devtools">
+<section id="perf-inspection-devtools" data-transition=fade>
 <div class="side-by-side">
   <img src="img/some-on-compositor.png">
   <img src="img/synced-animation.png">
@@ -2664,7 +2664,7 @@ react.render(
 </style>
 </section>
 
-<section id="fixed-single-page-app-proposal">
+<section id="fixed-single-page-app-proposal" data-transition=fade-out>
 <h2 class="svg smaller">
   <svg><text y="1em" x="3px">What about&hellip;</svg>
 </h2>
@@ -2687,7 +2687,7 @@ react.render(
 </code></pre>
 </section>
 
-<section id="fixed-single-page-app-explained">
+<section id="fixed-single-page-app-explained" data-transition=fade>
 <h2 class="svg smaller">
   <svg><text y="1em" x="3px">When you click&hellip;</svg>
 </h2>
@@ -2767,7 +2767,7 @@ react.render(
 </h1>
 </section>
 
-<section id="vestibular-disorders">
+<section id="vestibular-disorders" data-transition=fade-out>
 <h2 class="svg smaller">
   <svg><text y="1em" x="3px">Sick of Animation</svg>
 </h2>
@@ -2788,7 +2788,7 @@ react.render(
 </style>
 </section>
 
-<section id="motion-settings">
+<section id="motion-settings" data-transition=fade>
 <div class=side-by-side>
   <figure>
     <img src="img/reduce-motion-windows.png">
