--- a/index.html
+++ b/index.html
@@ -528,7 +528,7 @@ button.onclick = () => {
     <line x1="180" x2="167" y1="200" y2="250" class="connecting-line" />
     <rect x="165" y="50" width="150" height="150" rx="10" ry="10"
       class="callout"/>
-    <use href="#pie" x="210" y="100" width="60" height="60"/>
+    <use href="#pie" x="190" y="80" width="100" height="100" opacity="0.2"/>
 
     <rect x="622" y="250" width="50" height="200" class="painting"/>
     <text x="645" y="265" class="vertical-label">Painting</text>
