Replace pie picture with one that doesn't need attribution

--- a/index.html
+++ b/index.html
@@ -173,16 +173,8 @@ document.getElementsByTagName('head')[0].appendChild(link);
 </style>
 </section>
 
-<section id="about-meat-pie" data-background-image="img/punk-doily-1.jpg"
+<section id="about-meat-pie" data-background-image="img/pie.jpg"
   data-transition="fade">
-  <p class="full-page-source">
-    <span>
-      Source:
-      <a href="https://twitter.com/PDoily/status/1104208565290467328">
-        @PDoily
-      </a>
-    </span>
-  </p>
 </section>
 
 <section id="three-days-of-pie" class="fit-picture" data-transition="fade-in">
